manifests/kafka-networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: kafka
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-kafka
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/name: kafka-cluster-kafka
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-zookeeper
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/name: kafka-cluster-zookeeper
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
